<resources>
    <string name="app_name">Trivia</string>
    <string name="textv">"    "LOGO TRIVIA</string>
    <string name="textv2">Bienvenido a Logo Trivia!
                          Ingresa tu nombre para comenzar: </string>
    <string name="edt">Ingrese su sombre</string>
    <string name="triangulos">fondo</string>
    <string name="btn">Comenzar</string>
    <string name="fondo1">f1</string>
    <string name="fondo2">f2</string>
    <string name="homero">simpson trivia</string>
    <string name="textv3">hola:  </string>
    <string name="question">¿A que logo pertenece la imagen?</string>
    <string name="r1">Pertenece a Facebook</string>
    <string name="r2">Pertenece a Twitter</string>
    <string name="r3">Pertenece a whatsapp</string>
    <string name="r4">pertenece a Instagram</string>
    <string name="btn2">Enviar</string>
    <string name="logo1">logo 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="godzilla">haz perdido y Godzilla esta al acecho </string>
    <string name="btn3">Intenta nuevamente</string>
    <string name="perdiste">viene godzilla</string>
    <string name="fondo">gris</string>
    <string name="fondo3">nubes</string>
    <string name="win">Felicidades eres un winner!</string>
    <string name="ganaste">winner</string>
    <string name="btn4">Intenta nuevamente</string>
    <string name="contenedor1">winner</string>
    <string name="contenedor2">loser</string>


</resources>