<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado"
    tools:context=".MainActivity2">


    <ImageView
        android:id="@+id/fondo2"
        android:layout_width="433dp"
        android:layout_height="97dp"
        android:contentDescription="@string/fondo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132"
        app:srcCompat="@drawable/fondo_degradado" />

    <ImageView
        android:id="@+id/fondo1"
        android:layout_width="409dp"
        android:layout_height="87dp"
        android:contentDescription="@string/fondo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@color/black" />

    <TextView
        android:id="@+id/textv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textv"
        android:textColor="#E1DCE8"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/textv3"
        android:layout_width="390dp"
        android:layout_height="98dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textv3"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="291dp"
        android:layout_height="252dp"
        android:contentDescription="@string/logo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:srcCompat="@drawable/whatsapp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/material_dynamic_secondary90"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="381dp"
        android:layout_height="232dp"
        android:background="@color/color3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/r1"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/r2"
            android:textColor="@color/black"
            android:textColorHighlight="@color/color1"
            android:textColorHint="@color/color1"
            android:textColorLink="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/r3"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/r4"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/btn2"
        android:layout_width="367dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/color1"
        android:text="@string/btn2"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fondo1"
        app:layout_constraintVertical_bias="0.963" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/contenedor"
        android:name="com.example.trivia.Ganaste"
        android:layout_width="443dp"
        android:layout_height="561dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>